--- a/index.html
+++ b/index.html
@@ -191,3 +191,43 @@
         </div>
     </section>
     </main>
+
+    <main class="rechteck33">
+        <div class="rechteck33__bild">
+            <img class="rechteck33__img" src="./assets/img/douglas-sheppard-9rYfG8sWRVo-unsplash@2x.png" alt="">
+        </div>
+        <div class="rechteck33__text">
+            <div class="rechteck33__weiß" >
+                <h5 class="rechteck33__15">15 Jahre Erfahrung</h5>
+                <h1 class="rechteck33__mehr-wohn" >Mehr Wohn- und Lebensqualität mit Charta Immo</h1>
+            </div>
+            
+                <p class="rechteck33__p">
+                    Als Familienbetrieb für Wohnimmobilien stehen wir für eine kompetente, persönliche, engagierte und professionelle Arbeitsweise. Diese bringen wir nur durch unsere hohe Qualität als Bauträger und Projektentwickler zum Ausdruck, sondern auch durch unsere Verbundenheit zu den Menschen, den Dienstleistern und der Region Musterhausen.
+                </p>
+                <br>
+
+                <p class="rechteck33__p"> 
+                    In jedes unserer Projekte – ob Neubau oder Vermittlung – lassen wir unsere gesamte Erfahrung einfließen, die wir aus über 50 Jahren als Bauträger und Unternehmen im Immobiliengeschäft sammeln konnten.
+                </p>
+                <br>
+
+                <p class="rechteck33__p"> 
+                     Wir arbeiten für Menschen. Die Kundenwünsche stellen wir daher immer in den Fokus und berücksichtigen sie bei all unseren Überlegungen und Entscheidungen. 
+                </p>
+                <br>
+
+                <p class="rechteck33__p">
+                     Wir legen großen Wert auf eine hohe Wohn- und Lebensqualität und engagieren uns daher bei jedem Projekt und Auftrag so, als wäre er der wichtigste. 
+                </p>
+                <br>
+
+                <p class="rechteck33__p">
+                    Ob für unsere eigenen Bauprojekte, die Revitalisierung von Bestandsimmobilien oder die Vermittlung von Immobilien an Privatpersonen: Wir vertrauen auf die zuverlässigen Handwerker und Dienstleister aus der Region und empfehlen diese gerne weiter.
+                </p>
+            
+        </div>
+    </main>
+
+</body>
+</html>
